awesome/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awesome-app
spec:
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
      - name: awesome-app
        image: docker.io/vuza/awesome-app
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
