awesome/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awesome-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /awesome-app
        backend:
          serviceName: awesome-app
          servicePort: 3000
